<resources>
    <string name="app_name">Stationery Manager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="new_user_reg_button">New User? Register here</string>
    <string name="title_activity_inventory__list">Item List</string>
    <string name="title_activity_new__user__registration">New User Registration</string>
    <string name="set_employee_name">Set Employee Name</string>
    <string name="set_employee_email">Set Employee Email</string>
    <string name="set_personnel_number">Set Personnel Number</string>
    <string name="set_service_line">Set Service Line (Optional)</string>
    <string name="set_service_area">Set Service Area (Optional)</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="set_password">Set Password</string>
    <string-array name="service_area">
        <item>Select</item>
        <item>Technology</item>
        <item>S-I</item>
        <item>HRT</item>
    </string-array>
    <string-array name="service_line">
        <item>Select</item>
        <item>Digital</item>
        <item>OPT</item>
        <item>SAP Analytics</item>
    </string-array>
    <string name="title_activity_inventory__list__emp">Item List</string>
    <string name="action_refresh_list">Refresh List</string>
    <string name="action_logout">Logout</string>
    <string name="action_export">Export</string>
    <string name="title_item_status">Status:</string>
    <string name="title_item_qty">Quantity:</string>
    <string name="title_item_id">Item Id:</string>
    <string name="edit_item_id">Item Id</string>
    <string name="edit_item_name">Item Name</string>
    <string name="edit_item_qty">Item Quantity</string>
    <string name="title_activity_edit__item">Edit Item</string>
    <string name="num_inc">+</string>
    <string name="num_dec">-</string>
    <string name="title_activity_add__item">Add New Item</string>
    <string name="title_activity_select__item">Select Item</string>
    <string name="title_activity_export">Export</string>
    <string name="export_title">Export Data</string>
    <string name="exportgroup1">Item Name</string>
    <string name="exportgroup2">Employee</string>
    <string name="exportoption1">Excel</string>
    <string name="exportoption2">PDF</string>
    <string name="export_group_title">Group By:</string>
    <string name="export_option_title">Export As:</string>
    <string name="export_button">Export</string>
    <string name="action_show_cart">Show Cart</string>
    <string name="title_activity_show__cart">Cart</string>
    <string name="exit_button">Check Out</string>
    <string name="about">About Us</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="about_app">About App</string>
    <string name="about_dev">About Developer</string>
</resources>
