<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.expensemanager.saubhattacharya.MainActivity">

    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="97"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_cancel"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="98"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_export"
        android:orderInCategory="99"
        android:icon="@drawable/export"
        android:title="@string/action_export"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh_list"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/action_refresh_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_show_cart"
        android:orderInCategory="101"
        android:icon="@drawable/cart"
        android:title="@string/action_show_cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="102"
        android:icon="@drawable/shut_down"
        android:title="@string/action_logout"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item android:id="@+id/about"
        android:orderInCategory="104"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
