<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/androidbckgrnd1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="saubhattacharya.stationarymanager.com.Export"
    tools:showIn="@layout/activity_export">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/export1"
        android:text="@string/export_title"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <View style="@style/Divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/export2"
        android:text="@string/export_group_title"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/export_radio_grp1">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/export_radio1"
            android:text="@string/exportgroup1"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/export_radio2"
            android:text="@string/exportgroup2"/>

    </RadioGroup>

    <View style="@style/Divider"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/export3"
        android:text="@string/export_option_title"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/export_radio_grp2">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/export_radio3"
            android:text="@string/exportoption1"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/export_radio4"
            android:text="@string/exportoption2"/>

    </RadioGroup>

    <View style="@style/Divider"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/export_button"
        android:text="@string/export_button"
        android:layout_gravity="center_horizontal"
        android:onClick="OnExportButtonClicked"
        android:layout_marginTop="10dp"/>

</LinearLayout>
