<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="saubhattacharya.stationarymanager.com.Add_Item"
    android:orientation="vertical"
    android:background="@drawable/androidbckgrnd1"
    tools:showIn="@layout/activity_add__item">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_item_id"
                android:textSize="20sp"
                android:id="@+id/edit_item_id" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/edit_item_id_val"
                android:layout_marginBottom="2dp"/>

            <View style="@style/Divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_item_name"
                android:textSize="20sp"
                android:id="@+id/edit_item_name"
                android:layout_marginTop="2dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/edit_item_name_val"
                android:layout_marginBottom="2dp"/>

            <View style="@style/Divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_item_qty"
                android:textSize="20sp"
                android:id="@+id/edit_item_qty"
                android:layout_marginTop="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/NumDec"
                    android:text="@string/num_dec"
                    android:layout_weight="1"
                    android:layout_gravity="left"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_item_qty_val"
                    android:inputType="number"
                    android:layout_weight="1"
                    android:maxLength="3"
                    android:text="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/NumInc"
                    android:text="@string/num_inc"
                    android:layout_weight="1"
                    android:layout_gravity="right"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
