<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="saubhattacharya.stationarymanager.com.New_User_Registration"
    tools:showIn="@layout/activity_new__user__registration"
    android:background="@drawable/androidbckgrnd1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_personnel_number"
                android:textSize="20sp"
                android:id="@+id/set_personnel_number"
                android:layout_marginTop="2dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="number"
                android:maxLength="6"
                android:id="@+id/enter_personnel_number"/>

            <View style="@style/Divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_employee_name"
                android:textSize="20sp"
                android:id="@+id/set_employee_name"
                android:layout_marginTop="10dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/enter_employee_name"/>

            <View style="@style/Divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_employee_email"
                android:textSize="20sp"
                android:id="@+id/set_employee_email"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textEmailAddress"
                android:id="@+id/enter_employee_email"/>

            <View style="@style/Divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_password"
                android:textSize="20sp"
                android:id="@+id/set_password"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:inputType="textPassword"
                android:id="@+id/enter_password"/>

            <View style="@style/Divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_service_area"
                android:textSize="20sp"
                android:id="@+id/set_service_area"
                android:layout_marginTop="10dp" />

            <Spinner
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/enter_service_area" />

            <View style="@style/Divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_service_line"
                android:textSize="20sp"
                android:id="@+id/set_service_line"
                android:layout_marginTop="10dp" />

            <Spinner
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/enter_service_line"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
